Crash in [@ mozilla::PermissionManager::GetKeyForPrincipal]
Categories
(Core :: Privacy: Anti-Tracking, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | + | fixed |
| firefox80 | + | fixed |
People
(Reporter: calixte, Assigned: dimi)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-550e15ac-c709-4c8f-af9e-97ac00200614.
Top 10 frames of crashing thread:
0 XUL mozilla::PermissionManager::GetKeyForPrincipal extensions/permissions/PermissionManager.cpp:3069
1 XUL mozilla::ContentBlocking::UpdateAllowAccessOnParentProcess toolkit/components/antitracking/ContentBlocking.cpp:791
2 XUL mozilla::ContentBlocking::SaveAccessForOriginOnParentProcess toolkit/components/antitracking/ContentBlocking.cpp:618
3 XUL mozilla::ContentBlocking::CompleteAllowAccessFor const toolkit/components/antitracking/ContentBlocking.cpp:509
4 XUL mozilla::ContentBlocking::CompleteAllowAccessFor toolkit/components/antitracking/ContentBlocking.cpp:564
5 XUL mozilla::dom::ContentParent::RecvCompleteAllowAccessFor dom/ipc/ContentParent.cpp:6004
6 XUL mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:11218
7 XUL mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2166
8 XUL mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1969
9 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1238
There is 1 crash in nightly 79 with buildid 20200613214137. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1643115.
[1] https://hg.mozilla.org/mozilla-central/rev?node=c9b9111c017f
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 1•5 years ago
|
||
[Tracking Requested - why for this release]:
judging by affected installations this crash is #7 on list of top browser crashers list in 79.0b and accounting for 0.7% of all crashes.
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
Comment 5•5 years ago
|
||
The patch landed in nightly and beta is affected.
:dimi, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 9161036 [details]
Bug 1645777 - Add nullptr check after calling AntiTrackingUtils::GetPrincipal r=timhuang
Beta/Release Uplift Approval Request
- User impact if declined: May crash while visiting sites that have trackers.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): only a nullptr check
- String changes made/needed:
Comment 7•5 years ago
|
||
Comment on attachment 9161036 [details]
Bug 1645777 - Add nullptr check after calling AntiTrackingUtils::GetPrincipal r=timhuang
Approved for 79.0b5.
Comment 8•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Description
•