Bug 1645777 - Add nullptr check after calling AntiTrackingUtils::GetPrincipal. r=timhuang, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D82076